Closed
Bug 532363
Opened 16 years ago
Closed 16 years ago
TM: "Assertion failure: IsDenseArrayId(cx, obj, (jsid) prop), at ../jsarray.cpp"
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | final-fixed |
People
(Reporter: gkw, Assigned: jorendorff)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
1009 bytes,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
(function() {
for each(z in [0, 0, 0, 0]) { ({
__parent__: []
} = [])
}
})()
asserts js debug shell on TM tip with -j at Assertion failure: IsDenseArrayId(cx, obj, (jsid) prop), at ../jsarray.cpp:745
autoBisect shows this is probably related to bug 507683:
The first bad revision is:
changeset: 31824:8ca247a7d4ba
user: Jason Orendorff
date: Tue Aug 25 15:02:58 2009 -0700
summary: Bug 507683 part 2 - Avoid lookup on trace when calling a native getter with no slot. r=gal.
| Reporter | ||
Comment 1•16 years ago
|
||
Nominating for 1.9.2 since the potentially related bug has landed on 1.9.2, deferring to others about whether this issue should be blocking or not.
Flags: wanted1.9.2?
Flags: blocking1.9.2?
Updated•16 years ago
|
Assignee: general → jorendorff
Flags: blocking1.9.2? → blocking1.9.2+
Comment 3•16 years ago
|
||
Comment on attachment 415946 [details] [diff] [review]
v1
r=bzbarsky
Attachment #415946 -
Flags: review?(jwalden+bmo) → review+
| Assignee | ||
Comment 4•16 years ago
|
||
Whiteboard: fixed-in-tracemonkey
| Reporter | ||
Updated•16 years ago
|
Flags: wanted1.9.2?
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 6•16 years ago
|
||
status1.9.2:
--- → final-fixed
Comment 7•13 years ago
|
||
Automatically extracted testcase for this bug was committed:
https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•